# api/resolved/openapi/openapi.yaml
@@ -8,6 +8,8 @@ servers:
 tags:
 - description: Endpoints related to health checks and status monitoring
   name: health
+- description: "Endpoints related to authentication (signup, login, etc.)"
+  name: auth
 paths:
   /up:
     get:
@@ -22,24 +24,31 @@ paths:
       summary: Health check
       tags:
       - health
+  /auth/signup:
     post:
-      operationId: upPost
+      operationId: authSignup
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/UpPostRequest"
+              $ref: "#/components/schemas/AuthSignupRequest"
         required: true
       responses:
         "201":
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HealthPostResponse"
-          description: OK
-      summary: Health check (POST)
+                $ref: "#/components/schemas/AuthSignupResponse"
+          description: テナントおよび管理者ユーザーの作成に成功
+        default:
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+          description: Error Response
+      summary: 新規テナント作成 + 管理者ユーザー登録
       tags:
-      - health
+      - auth
 components:
   schemas:
     HealthOkResponse:
@@ -54,19 +63,119 @@ components:
           example: 123
           type: integer
       type: object
-    HealthPostResponse:
+    AuthSignupResponse:
       example:
-        tester: I'm up!
+        user:
+          name: 太郎
+          id: 1
+          email: taro@example.com
+        tenant:
+          name: 田中家
+          id: 1
       properties:
-        tester:
-          example: I'm up!
-          type: string
+        user:
+          $ref: "#/components/schemas/UserData"
+        tenant:
+          $ref: "#/components/schemas/TenantData"
+      required:
+      - tenant
+      - user
       type: object
-    UpPostRequest:
+    UserData:
       example:
-        test: 123
+        name: 太郎
+        id: 1
+        email: taro@example.com
       properties:
-        test:
-          example: 123
+        id:
+          example: 1
+          readOnly: true
           type: integer
+        name:
+          example: 太郎
+          type: string
+        email:
+          example: taro@example.com
+          format: email
+          type: string
+      required:
+      - email
+      - id
+      - name
+      type: object
+    TenantData:
+      example:
+        name: 田中家
+        id: 1
+      properties:
+        id:
+          example: 1
+          readOnly: true
+          type: integer
+        name:
+          example: 田中家
+          type: string
+      required:
+      - id
+      - name
+      type: object
+    ErrorResponse:
+      example:
+        errors:
+          email:
+          - has already been taken
+      properties:
+        errors:
+          additionalProperties:
+            items:
+              type: string
+            type: array
+          example:
+            email:
+            - has already been taken
+          type: object
+      required:
+      - errors
+      type: object
+    AuthSignupRequest:
+      example:
+        tenant_name: 田中家
+        password: Password123
+        password_confirmation: Password123
+        user_name: 太郎
+        email: taro@example.com
+      properties:
+        tenant_name:
+          description: 家族の名前
+          example: 田中家
+          maxLength: 50
+          minLength: 1
+          type: string
+        user_name:
+          description: ユーザーの名前
+          example: 太郎
+          maxLength: 25
+          minLength: 1
+          type: string
+        email:
+          description: ログインメールアドレス
+          example: taro@example.com
+          format: email
+          type: string
+        password:
+          description: ログインパスワード（8文字以上・英数混合）
+          example: Password123
+          minLength: 8
+          type: string
+        password_confirmation:
+          description: パスワード（確認用）
+          example: Password123
+          minLength: 8
+          type: string
+      required:
+      - email
+      - password
+      - password_confirmation
+      - tenant_name
+      - user_name
       type: object
